added screenshot and finalize the homework

--- a/hw1.html
+++ b/hw1.html
@@ -17,6 +17,11 @@
 
 	<div id="aboutme">
 			section	
+			<div id="article">
+				<div>Article</div>
+				<div>h1,h2,h3</div>
+				<div>P</div>
+			</div>
 	</div>
 
 	<div id="contactme">
