Added child boxes to article

--- a/hw1.html
+++ b/hw1.html
@@ -19,8 +19,12 @@
 			section	
 			<div id="article">
 				<div>Article</div>
-				<div>h1,h2,h3</div>
-				<div>P</div>
+					<div id="heading">
+						h1,h2,h3
+					</div>
+					<div id="text">
+						P
+					</div>
 			</div>
 	</div>
 
